--- a/4_ts_forras.html
+++ b/4_ts_forras.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TypeScript Unit teszt feladat</title>
-	<script src="<!-- ide linkejük a lefordított script-et -->"></script>
+	<script src="osszesOszto.js"></script>
+	<script src="parosDarab.js"></script>
 	<script src="testBaseTSUnit.js"></script>
 	</script>
 </head>
