--- a/4_ts_forras.html
+++ b/4_ts_forras.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TypeScript Unit teszt feladat</title>
-	<script src="osszesOszto.js"></script>
-	<script src="parosDarab.js"></script>
-	<script src="fuggvenyhivasPalindrom.js"></script>
+	<script src="osszesOszto.ts"></script>
+	<script src="parosDarab.ts"></script>
+	<script src="fuggvenyhivasPalindrom.ts"></script>
 	<script src="testBaseTSUnit.js"></script>
 	</script>
 </head>
 <body>
     <div></div>
-	<hr>
+	<
 	<div id="testResult">
 	<h2>Tesztek</h2></div>
 </body>
